--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 
-</h5></div></div></div><div class="parallax"><img src="download.jpeg" alt="Unsplashed background img 1"></div></div><div class="container"><div class="section"><div class="row"><div class="col s12 m4"><div class="icon-block"><h2 class="center"><i class="material-icons">person</i></h2><h5 class="center">Обо мне</h5><p class="light">
+</h5></div></div></div><div class="parallax"><img src="РЕНДЕР ЧАЙНИК.png" alt="Unsplashed background img 1"></div></div><div class="container"><div class="section"><div class="row"><div class="col s12 m4"><div class="icon-block"><h2 class="center"><i class="material-icons">person</i></h2><h5 class="center">Обо мне</h5><p class="light">
 
  Люблю: слушать музыку
           
@@ -193,7 +193,7 @@
     <!-- Тут просто пишите название картинки когда загрузите ее -->
     </p></div><img class="image-it" src="
 
-
+РЕНДЕР ЧАЙНИК.png
       
 
 
